--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -27,7 +27,7 @@
     flex-flow: column;
     justify-content: space-between;
     justify-content: center;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 56px);
     background-image: url(../img/theming/bj.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
